# home-server

./: .gitignore  Cargo.toml  README.md  audio_fixtures.json  config.toml  structure.md
.depricated/: rename.rs  repos.rs  repositories.rs  resample.rs  track.rs
.sqlx/: query-0c217f15345eed3c066736a811b393ada8cb379c8fbec036f41f76118149151e.json  query-20d415bfde76589655ee63c7dd6a54d675741f4d19c2e6d3dc3d3acb0fed80fe.json  query-26ae13acbbdd9a02caeb7d4908c361341f502509f9354863db096ddcfc71b00b.json  query-2e415dec81850b0a26dad56eed93bbd99bdf2d875c2d8fb5511c6f001f4d104b.json  query-8b6ca9247bf09952eaa092ec9138641b2193eec9331a7af39ff1d6ba203d5448.json  query-9f24e66ae130154a7b267b852816873f2f14d78bb540ec2da76b0892446e5996.json  query-af2c2d8bb15bc618ea60eefce7608cbb6d15d6120c7674257dc570fcd83361fe.json  query-b0167378f5342f6f1b101443381221b1a74ddff62215524cfb1790eed8ec1af3.json  query-bd5fa5063a3ee360c5e260d0a6ea65dc64eb71f37a72a3bfddf61e31e2e99ff1.json
data/db/: database.db  schema.sql
data/db/migrations/: 001_create_music_tables.sql
src/: lib.rs  main.rs
src/cli/: fixtures.rs  mod.rs
src/domain/: album.rs  artist.rs  audiofile.rs  mod.rs  track.rs  uploaded.rs
src/repository/: albums_repo.rs  artists_repo.rs  mod.rs  tracks_repo.rs
src/services/: mod.rs  prepare.rs  resample.rs  scanner.rs  sync.rs
src/utils/: audio_fixtures.rs  config.rs  db.rs  mod.rs  normalizations.rs
src/web/: handlers.rs  mod.rs  routes.rs  template_builders.rs
static/: index.html  script.js  styles.css
templates/: index.html
