[package]
name = "home-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = {version = "1.45.0", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"]}
tower = "0.5.2"
anyhow = "1.0.71"
tower-http = {version = "0.6.2", features = ["fs"]}
serde = {version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio-util = "0.7.13"
thiserror = "2.0.12"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono", "uuid"] }
toml = "0.8.20"
clap = {version = "4.5.32", features = ["derive"]}
futures = "0.3.31"
tokio-stream = "0.1.17"
colored = "3.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
walkdir = "2.5.0"
symphonia = "0.5.4"
rayon = "1.10.0"
uuid = {version = "1.16.0", features = ["v4", "serde", "v5"]}
lofty = "0.22.4"
log = "0.4.27"
env_logger = "0.11.8"
unicode-normalization = "0.1.24"
tempfile = "3.20.0"
askama = "0.14.0"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
sha2 = "0.10.9"
sevenz-rust2 = "0.17.1"
httpmock = "0.7.0"
indicatif = { version = "0.18.0", features = ["rayon"]}